# Netify-HTTP-Sink-Plugin

./: .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
.gitlab-ci/: build-templates.yml
deploy/: Makefile.am  netify-sink-http.json  netify-sink-post.json
deploy/debian/: .gitignore  Makefile.am  control.in  netify-sink-http.install.in  netify-sink-post.install.in  rules.in
deploy/freebsd/: .gitignore  Makefile.in  pkg-descr  pkg-plist.in
deploy/openwrt/: Makefile.in
deploy/plugins.d/: .gitignore  10-netify-sink-http.conf.in  Makefile.am
deploy/rpm/: .gitignore  Makefile.am  netify-sink-http.spec.in  netify-sink-post.spec.in
include/: Makefile.am  nsp-plugin.h  nsp-plugin.hpp
src/: .gitignore  Makefile.am  nsp-plugin.cpp
util/: .gitignore  CONFIGURE-devel.sh
